GNOME Bugzilla – Bug 626282
Full user names not displayed when they contain unexpected characters
Last modified: 2010-12-07 15:57:45 UTC
While testing another issue I noticed that the gnome-about-me panel displays the placeholder "Full Name" instead of the full name of the user it it contains unexpected characters like: "David <br> & <span> Pezi".
Yup, still fails with user-accounts panel, reassigning.
commit 5c33bfb1817b59ab925e1150179dca2bca570a34 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Dec 7 15:57:04 2010 +0000 user-accounts: Fix warnings with special chars in user name https://bugzilla.gnome.org/show_bug.cgi?id=626282