user-accounts: Fix warnings with special chars in user name

https://bugzilla.gnome.org/show_bug.cgi?id=626282